manifests/code-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      serviceAccountName: code-server
      containers:
      - image: luxas/k8s-web-ide:v1.0.1
        imagePullPolicy: Always
        name: code-server
        ports:
        - name: http
          containerPort: 8443
        volumeMounts:
        - name: kubeconfig
          mountPath: /root/.kube
        - name: docker
          mountPath: /var/run/docker.sock
      volumes:
      - name: kubeconfig
        configMap:
          name: code-server
      - name: docker
        hostPath:
          path: /var/run/docker.sock
---
kind: Service
apiVersion: v1
metadata:
  name: code-server
spec:
  selector:
    app: code-server
  ports:
    - port: 80
      targetPort: 8443
      name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: code-server
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: traefik-basic-auth
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: code-server
          servicePort: 80
    host: cluster-XX.workshop.kubernetesfinland.com
